--- a/collaborators.html
+++ b/collaborators.html
@@ -23,8 +23,8 @@
 						<!-- Header -->
 						<header/>
 						<!-- Page content -->
-						<div class="w3-padding w3-padding-64" id="past projects">
-							<h1>This is where reprints could go.</h1>
+						<div class="w3-padding w3-padding-64">
+							<h1>This is where info about collaborators could go.</h1>
 						</div>
 						<!-- Footer -->
 						<footer class="w3-center w3-light-grey w3-padding-32">
