--- a/contact.html
+++ b/contact.html
@@ -1,70 +1,45 @@
 <!DOCTYPE html>
 <html>
-<title>People | DeVault Wildlife Lab</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
-<style>
-	body {
-		font-family: "Times New Roman", Georgia, Serif;
-	}
-
-	h1,
-	h2,
-	h3,
-	h4,
-	h5,
-	h6 {
-		font-family: "Playfair Display";
-		letter-spacing: 5px;
-	}
-</style>
-
-<body>
-
-	<!-- Navbar -->
-
-	<div class="w3-top">
-		<div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-			<a href="index.html" class="w3-bar-item w3-button">DeVAULT LAB</a>
-			<div class="w3-right w3-hide-small">
-				<a href="people.html" class="w3-bar-item w3-button">People</a>
-				<a href="research.html" class="w3-bar-item w3-button">Research</a>
-				<a href="index.html#news" class="w3-bar-item w3-button">News</a>
-				<a href="contact.html" class="w3-bar-item w3-button">Contact</a>
-			</div>
-		</div>
-	</div>
-
-	<!-- Header -->
-
-	<header>
-	</header>
-
-	<!-- Page content -->
-
-	<div class="w3-content">
-		
-		<hr><!-- Contact Section -->
-
-		<div class="w3-container w3-padding-64" id="contact">
-			<h1>Contact</h1>
-			<br>
-			<h3>Excepteur sint occaecat</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in oluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
-			<h3>Prospective students</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in oluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p> 
-		</div>
-
-		<!-- End page content -->
-
-	</div>
-
-	<!-- Footer -->
-
-	<footer class="w3-center w3-light-grey w3-padding-32">
-		<p>theme modified from <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-	</footer>
-</body>
-
-</html>		
+	<title>People | DeVault Wildlife Lab</title>
+	<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+			<link rel="stylesheet" href="style.css">
+				<style>body { font-family: "Times New Roman", Georgia, Serif; } h1, h2, h3, h4, h5, h6 { font-family: "Playfair Display"; letter-spacing: 5px; }</style>
+				<body>
+					<!-- Navbar -->
+					<div class="w3-top">
+						<div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
+							<a href="index.html" class="w3-bar-item w3-button">DeVAULT LAB</a>
+							<div class="w3-right w3-hide-small">
+								<a href="people.html" class="w3-bar-item w3-button">People</a>
+								<a href="research.html" class="w3-bar-item w3-button">Research</a>
+								<a href="index.html#news" class="w3-bar-item w3-button">News</a>
+								<a href="collaborators.html" class="w3-bar-item w3-button">Collaborators</a>
+								<a href="contact.html" class="w3-bar-item w3-button">Contact</a>
+							</div>
+						</div>
+					</div>
+					<!-- Header -->
+					<header/>
+					<!-- Page content -->
+					<div class="w3-content">
+						<hr>
+							<!-- Contact Section -->
+							<div class="w3-container w3-padding-64" id="contact">
+								<h1>Contact</h1>
+								<br>
+									<h3>Excepteur sint occaecat</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in oluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+									<h3>Prospective students</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in oluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+								</div>
+								<!-- End page content -->
+							</div>
+							<!-- Footer -->
+							<footer class="w3-center w3-light-grey w3-padding-32">
+								<p>The content and opinions expressed on this web page do not necessarily reflect the views of nor are they endorsed by the University of Georgia or the University System of Georgia. Theme modified from
+									<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css.</a>
+								</p>
+							</footer>
+						</body>
+					</html>
