--- a/index.html
+++ b/index.html
@@ -5,22 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-<style>
-	body {
-		font-family: "Times New Roman", Georgia, Serif;
-	}
-
-	h1,
-	h2,
-	h3,
-	h4,
-	h5,
-	h6 {
-		font-family: "Playfair Display";
-		letter-spacing: 5px;
-	}
-</style>
+<style>body { font-family: "Times New Roman", Georgia, Serif; } h1, h2, h3, h4, h5, h6 { font-family: "Playfair Display"; letter-spacing: 5px; }</style>
 
 <body>
 
@@ -28,11 +13,12 @@
 
 	<div class="w3-top">
 		<div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-			<a href="#home" class="w3-bar-item w3-button">DeVAULT LAB</a>
+			<a href="index.html" class="w3-bar-item w3-button">DeVAULT LAB</a>
 			<div class="w3-right w3-hide-small">
 				<a href="people.html" class="w3-bar-item w3-button">People</a>
 				<a href="research.html" class="w3-bar-item w3-button">Research</a>
 				<a href="index.html#news" class="w3-bar-item w3-button">News</a>
+				<a href="collaborators.html" class="w3-bar-item w3-button">Collaborators</a>
 				<a href="contact.html" class="w3-bar-item w3-button">Contact</a>
 			</div>
 		</div>
@@ -60,7 +46,7 @@
 			</div>
 			<div class="w3-col m6 w3-padding-large">
 				<h1 class="w3-center">What We Do</h1>
-				<p class="w3-large">We apply interdisciplinary field and laboratory approaches to develop science-based solutions to wildlife management and conservation. Although much of our research is focused on carnivores, we work on a diversity of other taxa including birds, wild pigs, small mammals, and invertebrates.</p>
+				<p class="w3-large">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in oluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 			</div>
 		</div>
 		
@@ -72,7 +58,7 @@
 			</div>
 			<div class="w3-col m6 w3-padding-large">
 				<h1 class="w3-center">Where We Work</h1>
-				<p class="w3-large">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in oluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				<p class="w3-large">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in oluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
 			</div>
 		</div>
 		
@@ -80,19 +66,18 @@
 		
 		<div class="w3-row w3-padding-64">
 			<div style="margin: 0 auto; width: 80%"; id="news">
-				<a class="twitter-timeline" data-height="800" href="https://twitter.com/DevaultLab?ref_src=twsrc%5Etfw">Recent news</a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+				<a class="twitter-timeline" data-height="800" href="https://twitter.com/DevaultLab?ref_src=twsrc%5Etfw"></a><script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 				</div>
 		</div>
-
-		<hr><!-- End page content -->
 
 	</div>
 
 	<!-- Footer -->
 
 	<footer class="w3-center w3-light-grey w3-padding-32">
-		<p>theme modified from <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank"
-				class="w3-hover-text-green">w3.css</a></p>
+													<p>The content and opinions expressed on this web page do not necessarily reflect the views of nor are they endorsed by the University of Georgia or the University System of Georgia. Theme modified from
+														<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css.</a>
+													</p>
 	</footer>
 </body>
 
