--- a/people.html
+++ b/people.html
@@ -1,126 +1,80 @@
 <!DOCTYPE html>
 <html>
-<title>People | DeVault Wildlife Lab</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
-<style>
-	body {
-		font-family: "Times New Roman", Georgia, Serif;
-	}
-
-	h1,
-	h2,
-	h3,
-	h4,
-	h5,
-	h6 {
-		font-family: "Playfair Display";
-		letter-spacing: 5px;
-	}
-</style>
-
-<body>
-
-	<!-- Navbar -->
-
-	<div class="w3-top">
-		<div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-			<a href="index.html" class="w3-bar-item w3-button">DeVAULT LAB</a>
-			<div class="w3-right w3-hide-small">
-				<a href="people.html" class="w3-bar-item w3-button">People</a>
-				<a href="research.html" class="w3-bar-item w3-button">Research</a>
-				<a href="index.html#news" class="w3-bar-item w3-button">News</a>
-				<a href="contact.html" class="w3-bar-item w3-button">Contact</a>
-			</div>
-		</div>
-	</div>
-
-	<!-- Header -->
-
-	<header class="w3-display-container w3-content w3-wide" style="max-width:1600px;min-width:500px" id="home">
-	</header>
-
-	<!-- Page content -->
-
-	<div class="w3-content">
-
-		<hr><!-- People Section -->
-
-		<div class="w3-container w3-padding-64" id="people">
-			<h1>People</h1>
-			<br>
-			<div class="grid-container">
-				<img src="./images/travis.jpg" class="w3-round w3-opacity-min" alt="travis" width="100%" height="auto">
-				<div>
-					<h5>Travis DeVault, Ph.D</h5>
-					<p style="color: grey">Title / travis at uga dot edu / <a href="https://scholar.google.com/citations?user=1Ry3fI8AAAAJ&hl=en" title="Google Scholar" target="_blank">Google Scholar</a></p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-						labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-						laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-						voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-						non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<img src="./images/mary.webp" class="w3-round w3-opacity-min" alt="mary" width="100%" height="auto">
-				<div>
-					<h5>Mary Chapman</h5>
-					<p style="color: grey">Research technician / mary at uga dot edu</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-						labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-						laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-						voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-						non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<img src="./images/shayna.webp" class="w3-round w3-opacity-min" alt="shayna" width="100%" height="auto">
-				<div>
-					<h5>Shayna Mun&#245;z</h5>
-					<p style="color: grey">Research technician / shayna at uga dot edu</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-						labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-						laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-						voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-						non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<img src="./images/carson.jpg" class="w3-round w3-opacity-min" alt="carson" width="100%" height="auto">
-				<div>
-					<h5>Carson Pakula</h5>
-					<p style="color: grey">Masters student / carson at uga dot edu</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-						labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-						laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-						voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-						non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<img src="./images/shane.jpg" class="w3-round w3-opacity-min" alt="shane" width="100%" height="auto">
-				<div>
-					<h5>Shane Guenin</h5>
-					<p style="color: grey">Masters student / shane at uga dot edu</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-						labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-						laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in
-						voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-						non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-				</div>
-				<img src="./images/jon.jpg" class="w3-round w3-opacity-min" alt="jon" width="100%" height="auto">
-				<div>
-					<h5>Jon Skaggs</h5>
-					<p style="color: grey">Project coordinator / jskaggs at uga dot edu</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in oluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-					
-				</div>
-			</div>
-		</div>
-
-		<hr><!-- End page content -->
-
-	</div>
-
-	<!-- Footer -->
-
-	<footer class="w3-center w3-light-grey w3-padding-32">
-		<p>
-		<p>theme modified from <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-	</footer>
-</body>
-
-</html>
+	<title>People | DeVault Wildlife Lab</title>
+	<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+			<link rel="stylesheet" href="style.css">
+				<style>body { font-family: "Times New Roman", Georgia, Serif; } h1, h2, h3, h4, h5, h6 { font-family: "Playfair Display"; letter-spacing: 5px; }</style>
+				<body>
+					<!-- Navbar -->
+					<div class="w3-top">
+						<div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
+							<a href="index.html" class="w3-bar-item w3-button">DeVAULT LAB</a>
+							<div class="w3-right w3-hide-small">
+								<a href="people.html" class="w3-bar-item w3-button">People</a>
+								<a href="research.html" class="w3-bar-item w3-button">Research</a>
+								<a href="index.html#news" class="w3-bar-item w3-button">News</a>
+								<a href="collaborators.html" class="w3-bar-item w3-button">Collaborators</a>
+								<a href="contact.html" class="w3-bar-item w3-button">Contact</a>
+							</div>
+						</div>
+					</div>
+					<!-- Header -->
+					<header>
+						<!-- Page content -->
+						<div class="w3-content">
+								<!-- People Section -->
+								<div class="w3-padding-top-64">
+									<h1>People</h1>
+								</div>
+								<div class="grid-container" style="margin-left:16px!important">
+									<img src="./images/travis.jpg" class="w3-round w3-opacity-min" alt="travis" width="100%" height="auto">
+										<div>
+											<h5>Travis DeVault, Ph.D</h5>
+											<p style="color: grey">Title / travis at uga dot edu /
+												<a href="https://scholar.google.com/citations?user=1Ry3fI8AAAAJ&hl=en" title="Google Scholar" target="_blank">Google Scholar</a>
+											</p>
+											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+										</div>
+										<img src="./images/mary.webp" class="w3-round w3-opacity-min" alt="mary" width="100%" height="auto">
+											<div>
+												<h5>Mary Chapman</h5>
+												<p style="color: grey">Research technician / mary at uga dot edu</p>
+												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+											</div>
+											<img src="./images/shayna.webp" class="w3-round w3-opacity-min" alt="shayna" width="100%" height="auto">
+												<div>
+													<h5>Shayna Mu&#241;oz</h5>
+													<p style="color: grey">Research technician / shayna at uga dot edu</p>
+													<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+												</div>
+												<img src="./images/carson.jpg" class="w3-round w3-opacity-min" alt="carson" width="100%" height="auto">
+													<div>
+														<h5>Carson Pakula</h5>
+														<p style="color: grey">Masters student / carson at uga dot edu</p>
+														<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+													</div>
+													<img src="./images/shane.jpg" class="w3-round w3-opacity-min" alt="shane" width="100%" height="auto">
+														<div>
+															<h5>Shane Guenin</h5>
+															<p style="color: grey">Masters student / shane at uga dot edu</p>
+															<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+														</div>
+														<img src="./images/jon.jpg" class="w3-round w3-opacity-min" alt="jon" width="100%" height="auto">
+															<div>
+																<h5>Jon Skaggs</h5>
+																<p style="color: grey">Project coordinator / jskaggs at uga dot edu</p>
+																<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in oluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+															</div>
+														</div>
+													</div>
+													<!-- End page content -->
+												</div>
+												<!-- Footer -->
+												<footer class="w3-center w3-light-grey w3-padding-32">
+													<p>The content and opinions expressed on this web page do not necessarily reflect the views of nor are they endorsed by the University of Georgia or the University System of Georgia. Theme modified from
+														<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css.</a>
+													</p>
+												</footer>
+											</body>
+										</html>
