--- a/research.html
+++ b/research.html
@@ -1,92 +1,93 @@
 <!DOCTYPE html>
 <html>
-<title>Research | DeVault Wildlife Lab</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
-<style>
-	body {
-		font-family: "Times New Roman", Georgia, Serif;
-	}
-	h1,
-	h2,
-	h3,
-	h4,
-	h5,
-	h6 {
-		font-family: "Playfair Display";
-		letter-spacing: 5px;
-	}
-</style>
-
-<body>
-
-	<!-- Navbar -->
-
-	<div class="w3-top">
-		<div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
-			<a href="index.html" class="w3-bar-item w3-button">DeVAULT LAB</a>
-			<div class="w3-right w3-hide-small">
-				<a href="people.html" class="w3-bar-item w3-button">People</a>
-				<a href="research.html" class="w3-bar-item w3-button">Research</a>
-				<a href="index.html#news" class="w3-bar-item w3-button">News</a>
-				<a href="contact.html" class="w3-bar-item w3-button">Contact</a>
-			</div>
-		</div>
-	</div>
-
-	<!-- Header -->
-
-	<header>
-	</header>
-
-	<!-- Page content -->
-
-	<div class="w3-content">
-	
-		<!-- Current projects -->
-		
-		<div class="w3-padding w3-padding-64" id="current projects"><h1>Current projects</h1></div>
-		
-		<ul class="flex-container longhand">
-			<li><img src="./images/shep_alligator.jpg" style="margin-left:auto; margin-right:auto;max-height:200px"></li>
-			<li><img src="./images/shayna.webp" style="margin-left:auto; margin-right:auto;max-height:200px"></li>
-			<li><img src="./images/carson.jpg" style="margin-left:auto; margin-right:auto;max-height:200px"></li>
-		</ul>
-		<div class="w3-padding w3-padding-64" id="project 2">
-			<h3 class="w3-center">Constructed wetlands and birds</h3>
-			<p class="w3-large" style = "width:100%; column-count: 2; column-gap: 10%">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in oluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		</div>
-		
-		<ul class="flex-container longhand">
-			<li><img src="./images/shep_alligator.jpg" style="margin-left:auto; margin-right:auto;max-height:200px"></li>
-			<li><img src="./images/shep_spoonbill.jpg" style="margin-left:auto; margin-right:auto;max-height:200px"></li>
-			<li><img src="./images/shep_ship.jpg" style="margin-left:auto; margin-right:auto;max-height:200px"></li>
-		</ul>
-		<div class="w3-padding w3-padding-64" id="project 1">
-			<h3 class="w3-center">Savannah Harbor Expansion Project: Cd in birds</h3>
-			<p class="w3-large" style = "width:100%; column-count: 2; column-gap: 10%">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in oluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		</div>
-		
-		<hr><!-- Past projects -->
-		
-		<div class="w3-padding w3-padding-64" id="past projects"><h1>Past projects</h1>
-		
-		<p class="w3-large"><a href="./reprints.html" title="Reprints" target = "_blank">Click here for reprints.</a></p>
-		
-		</div>
-
-		<!-- End page content -->
-
-	</div>
-
-	<!-- Footer -->
-
-	<footer class="w3-center w3-light-grey w3-padding-32">
-		<p>theme modified from <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
-	</footer>
-</body>
-
-</html>
+	<title>Research | DeVault Wildlife Lab</title>
+	<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+			<link rel="stylesheet" href="style.css">
+				<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+					<style>body { font-family: "Times New Roman", Georgia, Serif; } h1, h2, h3, h4, h5, h6 { font-family: "Playfair Display"; letter-spacing: 5px; }</style>
+					<body>
+						<!-- Navbar -->
+						<div class="w3-top">
+							<div class="w3-bar w3-white w3-padding w3-card" style="letter-spacing:4px;">
+								<a href="index.html" class="w3-bar-item w3-button">DeVAULT LAB</a>
+								<div class="w3-right w3-hide-small">
+									<a href="people.html" class="w3-bar-item w3-button">People</a>
+									<a href="research.html" class="w3-bar-item w3-button">Research</a>
+									<a href="index.html#news" class="w3-bar-item w3-button">News</a>
+									<a href="collaborators.html" class="w3-bar-item w3-button">Collaborators</a>
+									<a href="contact.html" class="w3-bar-item w3-button">Contact</a>
+								</div>
+							</div>
+						</div>
+						<!-- Header -->
+						<header/>
+						<!-- Page content -->
+						<div class="w3-content">
+							<!-- Current projects -->
+							<div class="w3-padding-top-64">
+								<h1>Research</h1>
+							</div>
+							<div class="w3-padding">
+								<h3>Ecology of Animal-Vehicle Collisions</h3>
+							</div>
+							<div class="grid-container" style="margin-left:16px!important">
+								<img src="./images/lab.webp" class="w3-round w3-opacity-min" alt="lab" width="100%" height="auto">
+									<div>
+										<h5>Project blurb</h5>
+										<p style="color: grey">Subtitle</p>
+										<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+									</div>
+									<img src="./images/lab.webp" class="w3-round w3-opacity-min" alt="lab" width="100%" height="auto">
+										<div>
+											<h5>Project blurb</h5>
+											<p style="color: grey">Subtitle</p>
+											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+										</div>
+									</div>
+									<div style="margin-left:16px!important">
+										<h3>Avian Ecotoxicology</h3>
+									</div>
+									<div class="grid-container" style="margin-left:16px!important">
+										<img src="./images/lab.webp" class="w3-round w3-opacity-min" alt="lab" width="100%" height="auto">
+											<div>
+												<h5>Project blurb</h5>
+												<p style="color: grey">Subtitle</p>
+												<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+											</div>
+											<img src="./images/lab.webp" class="w3-round w3-opacity-min" alt="lab" width="100%" height="auto">
+												<div>
+													<h5>Project blurb</h5>
+													<p style="color: grey">Subtitle</p>
+													<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+												</div>
+											</div>
+											<div style="margin-left:16px!important">
+												<h3>Scavenging Ecology</h3>
+											</div>
+											<div class="grid-container" style="margin-left:16px!important">
+												<img src="./images/lab.webp" class="w3-round w3-opacity-min" alt="lab" width="100%" height="auto">
+													<div>
+														<h5>Project blurb</h5>
+														<p style="color: grey">Subtitle</p>
+														<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+													</div>
+												</div>
+												<hr>
+													<!-- Past projects -->
+													<div class="w3-padding w3-padding-64" id="past projects">
+														<h1>Past projects</h1>
+														<p class="w3-large" style="margin-left:16px!important">
+															<a href="./reprints.html" title="Reprints" target="_blank">Click here for reprints.</a>
+														</p>
+													</div>
+													<!-- End page content -->
+												</div>
+												<!-- Footer -->
+												<footer class="w3-center w3-light-grey w3-padding-32">
+													<p>The content and opinions expressed on this web page do not necessarily reflect the views of nor are they endorsed by the University of Georgia or the University System of Georgia. Theme modified from
+														<a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css.</a>
+													</p>
+												</footer>
+											</body>
+										</html>
